test/spec_vectors/f64/fail/module_5.wat
(module (func (result f64) (f64.mul (i64.const 0) (f32.const 0))))